@@ -56,6 +56,8 @@ Fixed: The SSL connection can be sporadically interrupted.
 
 Fixed: Issue #1101: Updated configuration examples for PAM in the Monit manual. Thanks to Lutz Mader.
 
+Fixed: The network test was failing on WSL (Windows subsystem for Linux).
+
 
 Version 5.33.0
 
